# garli

./: ProjectHome.md  README.md  toplevelREADME.md
garli/branches/incr/src/: Makefile.am  adaptation.cpp  adaptation.h  addtaxonrunmode.cpp  bipartition.cpp  bipartition.h  clamanager.h  condlike.h  configoptions.cpp  configoptions.h  configoptionsauto.cpp  configreader.cpp  configreader.h  cudaman.cpp  cudaman.h  datamatr.h  defs.h  errorexception.h  funcs.cpp  funcs.h  garlimain.cpp  garlireader.cpp  garlireader.h  individual.cpp  individual.h  model.cpp  model.h  mpifuncs.cpp  mpitrick.cpp  optimization.cpp  outputman.h  population.cpp  population.h  reconnode.h  rng.cpp  rng.h  sequencedata.cpp  sequencedata.h  set.cpp  set.h  (+7 more)
garli/branches/partitioning/: INSTALL  Makefile.am  build_garli.sh  configure  configure.ac
garli/branches/partitioning/example/: ranastart.oldformat.tre
garli/branches/partitioning/example/basic/: EXAMPLES.txt  garli.conf  garli.conf.AA.defaultSettings  garli.conf.AA.test  garli.conf.codon.defaultSettings  garli.conf.codon.test  garli.conf.nuc.defaultSettings  garli.conf.nuc.test  ranaconstraint.format2  ranastart.nexus.tre
garli/branches/partitioning/partition_Mk_Examples/templateConfigs/: garli.3diffModels.bigData.conf  garli.3diffModels.smallData.conf  garli.mixedDnaMkv.conf  garli.mkv.conf  garli.oneModelType.bigData.conf  garli.oneModelType.smallData.conf
garli/branches/partitioning/project/standardGarliVC/: BOINCGarli.vcproj  standardGarli.vcproj
garli/branches/partitioning/src/: Makefile.am  Makefile.ser  adaptation.cpp  adaptation.h  bipartition.cpp  bipartition.h  clamanager.h  condlike.cpp  condlike.h  configoptions.cpp  configoptions.h  configreader.cpp  configreader.h  datamatr.cpp  datamatr.h  defs.h  errorexception.h  funcs.cpp  funcs.h  garlimain.cpp  garlireader.cpp  garlireader.h  hashdefines.h  individual.cpp  individual.h  linalg.cpp  model.cpp  model.h  mpitrick.cpp  optimization.cpp  population.cpp  population.h  reconnode.h  rng.h  sequencedata.cpp  sequencedata.h  stopwatch.h  topologylist.cpp  translatetable.h  tree.cpp  (+4 more)
garli/branches/partitioning/tests/: runtests.sh
garli/branches/partitioning/tests/check/: a.G3.conf  a.G4.conf  a.conf  c.M3x2.conf  c.conf  n.G3.conf  n.G4.conf  n.conf  n.const.conf  p.3diff.conf
garli/branches/partitioning/tests/const/: n.neg.const.conf  n.negBack.const.conf  n.pos.const.conf  n.posBack.const.conf
garli/branches/partitioning/tests/data/: a.G3.start  a.G4.start  c.M3x2.start  c.start  expected.scr  moore.start  n.G4.start  n.G5.start  n.start  p.3diff.start
garli/branches/partitioning/tests/internal/: a.G3.conf  a.G4.conf  a.conf  c.M3x2.conf  n.G3.conf  n.G4.conf  n.conf  p.3diff.conf  p.mk.conf  p.mk.ssr.conf  p.mkO.conf  p.mkO.ssr.conf  p.mkv.conf  p.mkv.ssr.conf  p.mkvO.conf  p.mkvO.ssr.conf
garli/branches/partitioning/tests/output/: a.G3.conf  a.G4.conf  a.conf  c.M3x2.conf  c.conf  n.G3.conf  n.G4.conf  n.conf  n.wackyNames.conf  p.3diff.conf  p.mkvO.ssr.conf
garli/branches/partitioning/tests/restart/: a.G3.conf  a.G4.conf  a.conf  c.M3x2.conf  c.conf  n.G3.conf  n.G4.conf  n.conf  n.const.conf  p.3diff.conf
garli/branches/partitioning/tests/scoring/: a.G3.conf  a.G4.conf  c.M3x2.conf  c.conf  g.dnaBnoZ.conf  g.dnaMix.conf  n.conf  p.3diff.conf  p.mk.conf  (+7 more)
garli/tags/2.01-release/: Makefile.am  config.h.in
garli/tags/2.01-release/src/: adaptation.h  clamanager.h  condlike.h  individual.h  model.cpp  mpitrick.cpp  set.h  translatetable.cpp  treenode.cpp  utility.h
garli/trunk/: INSTALL  Makefile.am  Makefile.in  QuickStart.txt  README.txt  bootstrap.sh  build_garli.sh  config.h.in  configure  configure.ac
garli/trunk/example/: LGmodel.mod  README.txt  garli.conf  garli.conf.AA.defaultSettings  garli.conf.AA.test  garli.conf.codon.test  garli.conf.parallel  rana.nex  ranaconstraint.format1  ranaconstraint.format2
garli/trunk/example/basic/: garli.conf.AA.defaultSettings
garli/trunk/project/buildTester/: garliBuildTester.sh
garli/trunk/project/macGarliXCode/: garli.conf
garli/trunk/project/standardGarliVC/: BOINCGarli.sln  BOINCGarli.vcproj  GPUBOINCGarli.vcproj  standardGarli.sln  standardGarli.vcproj
garli/trunk/src/: Makefile  Makefile.am  Makefile.in  Makefile.par  Makefile.ser  adaptation.cpp  adaptation.h  bipartition.cpp  bipartition.h  build_definition_notes.txt  calculationmanager.cpp  calculationmanager.h  clamanager.h  condlike.cpp  condlike.h  configoptions.cpp  configoptions.h  configreader.cpp  configreader.h  cudainterface.cu  cudaman.cpp  cudaman.h  datamatr.cpp  datamatr.h  defs.h  defs.mac.h  errorexception.h  funcs.cpp  funcs.h  garli.br  garlimain.cpp  garlireader.cpp  garlireader.h  individual.cpp  individual.h  linalg.cpp  linalg.h  managedresource.cpp  managedresource.h  mlhky.cpp  (+34 more)
garli/trunk/tests/: Makefile.am  Makefile.in  runtests.BEAGLE.sh  runtests.sh
garli/trunk/tests/check/: a.G3.conf  a.G4.conf  a.conf  c.M3x2.conf  c.conf  g.dnaBnoZ.conf  n.G3.conf  n.G4.conf  n.conf  n.const.conf  p.3diff.conf  p.mkv.ssr.conf
garli/trunk/tests/const/: n.negBack.const.conf  n.pos.const.conf  n.posBack.const.conf
garli/trunk/tests/data/: c.start  expected.scr  z.11x2178.AA.nex  z.11x2178.nex  z.11x30.stop.nex  z.byPos.11x2178.nex  z.pos.const.tre
garli/trunk/tests/internal/: a.G3.conf  a.G4.conf  c.M3x2.conf  c.conf  p.mk.conf  p.mk.ssr.conf  p.mkO.conf  p.mkO.ssr.conf  p.mkv.conf  p.mkv.ssr.conf  p.mkvO.conf  p.mkvO.ssr.conf
garli/trunk/tests/output/: a.G3.conf  a.G4.conf  a.conf  c.M3x2.conf  c.conf  n.G3.conf  n.G4.conf  n.conf  n.wackyNames.conf  p.3diff.conf  p.mkvO.ssr.conf
garli/trunk/tests/restart/: a.G3.conf  a.G4.conf  a.conf  c.M3x2.conf  c.conf  g.dnaMix.conf  n.G3.conf  n.G4.conf  n.conf  n.const.conf  p.3diff.conf  p.mk.ssr.conf  p.mkv.ssr.conf  p.mkvO.ssr.conf
garli/trunk/tests/scoring/: a.G3.conf  a.G4.conf  a.conf  c.M3x2.conf  c.conf  g.dnaBnoZ.conf  g.dnaMix.conf  n.G4.conf  n.G5.conf  n.conf  p.mk.conf  p.mk.ssr.conf  p.mkO.conf  p.mkO.ssr.conf  p.mkv.conf  p.mkv.ssr.conf  p.mkvO.conf  p.mkvO.ssr.conf
(+844 files in other folders)
